--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>
-    {% if page.title == "Home" %}
-      {{ site.title }} &middot; {{ site.alttitle }}
-    {% else %}
-      {{ page.title }} &middot; {{ site.alttitle }}
-    {% endif %}
+  <img src="{{ site.baseurl }}/images/imlogosnip.png" alt="EPSRC CDT in Machine Learning Systems">
   </title>
 
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
